fix the dialog size when viewport meta-tag is not defined/n/nwhen the viewport meta tag is not defined (and the app has full width instead of device-width) the dialog is too small to be viewed, this adds viewport tag detection that adds a css class on the element (addToHomeNoscale)

--- a/style/add2home.css
+++ b/style/add2home.css
@@ -22,6 +22,12 @@
 	-webkit-box-shadow:0 0 4px rgba(0,0,0,0.5);
 }
 
+/* this should work (increasing the font size of the whole dialog) but it actually don't, it works only if you remove 'width' from the #addToHomeScreen style  */
+
+#addToHomeScreen.addToHomeNoscale {
+  font-size: 40px;
+}
+
 
 /* reset */
 
